--- a/src/Components/css/Header.css
+++ b/src/Components/css/Header.css
@@ -11,9 +11,9 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 50px;
-  padding: 10px 30px;
-  width: 1280px;
+  gap: 5rem;
+  padding: 0 3rem;
+  width: 128rem;
   max-width: 100%;
   margin: 0 auto;
   overflow-x: hidden;
@@ -24,7 +24,7 @@
 }
 
 .logo {
-  width: 240px;
+  width: 24rem;
 }
 
 .dark .st0 {
@@ -35,26 +35,48 @@
   fill: #808083;
 }
 
+.the-practice-animation {
+  animation: left-right 1s;
+}
+
 .nav {
   display: flex;
-  gap: 30px;
 }
 
 .nav a {
   text-decoration: none;
-  font-size: 1.1rem;
+  position: relative;
+  font-size: 2rem;
   color: var(--dark);
+  padding: 2.5rem 2rem;
+}
+
+.nav a:hover::after,
+.nav .active::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 4px;
+  background-color: var(--dark);
+  opacity: 0;
+  bottom: 0;
+  left: 0;
+}
+
+.nav a:hover::after,
+.nav .active::after {
+  opacity: 1;
 }
 
 .menu-icon {
   position: absolute;
-  right: 40px;
-  top: 20px;
+  right: 4rem;
+  top: 2rem;
   display: none;
 }
 
 .menu-icon svg {
-  font-size: 30px;
+  font-size: 3rem;
   transition: 0.3s;
   position: absolute;
   background-color: var(--light);
@@ -77,26 +99,36 @@
   }
 }
 
-@media only screen and (max-width: 767px) {
+@keyframes left-right {
+  0% {
+    transform: translateX(40rem);
+  }
+  100% {
+    transform: translateX(0px);
+  }
+}
+
+@media only screen and (max-width: 76rem) {
   .header {
     max-width: 100%;
+    padding: 1rem 0;
   }
   .logo {
-    width: 180px;
+    width: 18rem;
   }
   .menu-icon {
     display: block;
   }
   .nav {
     flex-direction: column;
-    gap: 20px;
+    gap: 0rem;
     position: absolute;
     top: 0;
     right: 0;
     background-color: white;
     height: 100vh;
     width: 50%;
-    padding: 20px;
+    padding: 2rem;
     margin-top: 66px;
     transition: 0.3s;
     transform: translateX(100%);
@@ -111,6 +143,6 @@
   }
   .nav a {
     border-bottom: 1px solid rgb(206, 206, 206);
-    padding-bottom: 20px;
+    padding: 2rem 0;
   }
 }
